--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,35 @@
     ],
     "python.autoComplete.extraPaths": [
         "./tools/.venv/Lib/site-packages"
-    ]
+    ],
+    
+    // Java formatting settings to fix switch statement indentation
+    "[java]": {
+        "editor.defaultFormatter": "redhat.java",
+        "editor.tabSize": 4,
+        "editor.insertSpaces": true,
+        "editor.detectIndentation": false,
+        "editor.formatOnSave": true,
+        "editor.formatOnType": true
+    },
+    
+    // Java-specific settings
+    "java.format.enabled": true,
+    "java.format.onType.enabled": false,
+    "java.format.comments.enabled": false,
+    "java.compile.nullAnalysis.mode": "automatic",
+    "java.saveActions.organizeImports": true,
+    "redhat.telemetry.enabled": false,
+    
+    // Java formatter settings - disable switch case indentation
+    "java.format.settings.url": "",
+    "java.format.settings.profile": "",
+    "java.format.tabSize": 4,
+    "java.format.insertSpaces": true,
+    
+    // Force specific indentation for switch statements
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": "always"
+    }
 }
